--- a/1  - Introduction to Python/1_Python_Basic.ipynb
+++ b/1  - Introduction to Python/1_Python_Basic.ipynb
@@ -1,6 +1,256 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color=gray>**Introduction to Python**</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color=orange>**Python Basic**</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(7+10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Addition\n",
+    "print(7+10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "194.87171000000012\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How much is your $100 worth after 7 years?\n",
+    "print(100*(1.1**7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a variable savings\n",
+    "savings=100\n",
+    "# Print out savings\n",
+    "print(savings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "194.87171000000012\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a variable savings\n",
+    "savings = 100\n",
+    "\n",
+    "# Create a variable growth_multiplier\n",
+    "growth_multiplier=1.1\n",
+    "\n",
+    "# Calculate result\n",
+    "result=savings*growth_multiplier**7\n",
+    "\n",
+    "# Print out result\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a variable desc\n",
+    "desc='compound interest'\n",
+    "\n",
+    "# Create a variable profitable\n",
+    "profitable=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1.1\n",
+    "b='Love'\n",
+    "c=True\n",
+    "\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "compound interestcompound interest\n"
+     ]
+    }
+   ],
+   "source": [
+    "savings = 100\n",
+    "growth_multiplier = 1.1\n",
+    "desc = \"compound interest\"\n",
+    "\n",
+    "# Assign product of savings and growth_multiplier to year1\n",
+    "year1=savings*growth_multiplier\n",
+    "# Print the type of year1\n",
+    "print(type(year1))\n",
+    "\n",
+    "# Assign sum of desc and desc to doubledesc\n",
+    "doubledesc=desc+desc\n",
+    "\n",
+    "# Print out doubledesc\n",
+    "print(doubledesc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I started with $100 and now have $194.87171000000012. Awesome!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definition of savings and result\n",
+    "savings = 100\n",
+    "result = 100 * 1.10 ** 7\n",
+    "\n",
+    "# Fix the printout\n",
+    "print(\"I started with $\" + str(savings) + \" and now have $\" + str(result) + \". Awesome!\")\n",
+    "\n",
+    "# Definition of pi_string\n",
+    "pi_string = \"3.1415926\"\n",
+    "\n",
+    "# Convert pi_string into float: pi_float\n",
+    "pi_float=float(pi_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can add integers, like 5 to strings.\n",
+      "I said Hey Hey Hey!\n",
+      "1\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI said \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHey \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHey!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;01mTrue\u001b[39;00m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mThe correct answer to this multiple choice exercise is answer number \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "#Which one of these will throw an error?\n",
+    "\n",
+    "print(\"I can add integers, like \" + str(5) + \" to strings.\")\n",
+    "\n",
+    "print(\"I said \" + (\"Hey \" * 2) + \"Hey!\")\n",
+    "\n",
+    "print(True + False)\n",
+    "\n",
+    "print(\"The correct answer to this multiple choice exercise is answer number \" + 2) ###\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,11 +259,24 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.8"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
